// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: match > match { x: 1 } | { x: a } -> a 1`] = `
{
  "displays": {
    "constraints": [
      "1 ~~ ?2",
      "Num ~~ ?4",
      "Schema [ x: ?6 ] ~~ Schema [ x: Num ]",
      "?6 ~~ ?6",
      "?6 ~~ ?8",
    ],
    "term": "match Struct [ x: 1 ]
| Struct [ x: a ] -> a",
    "type": "?8",
  },
}
`;

exports[`inference: match > match { x: 1 } | { x: a } -> a 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 21,
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 1,
          },
        },
        "lvl": 0,
        "right": {
          "id": 17,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 20,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 19,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 4,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 32,
          "type": "Neutral",
          "value": {
            "arg": {
              "id": 30,
              "row": {
                "label": "x",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "id": 28,
                  "type": "Neutral",
                  "value": {
                    "id": 27,
                    "type": "Var",
                    "variable": {
                      "lvl": 0,
                      "type": "Meta",
                      "val": 6,
                    },
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "id": 29,
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "id": 31,
            "type": "App",
          },
        },
        "lvl": 0,
        "right": {
          "id": 25,
          "type": "Neutral",
          "value": {
            "arg": {
              "id": 23,
              "row": {
                "label": "x",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "id": 20,
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Num",
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "id": 22,
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "id": 24,
            "type": "App",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 28,
          "type": "Neutral",
          "value": {
            "id": 27,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 6,
            },
          },
        },
        "lvl": 0,
        "right": {
          "id": 28,
          "type": "Neutral",
          "value": {
            "id": 27,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 6,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 28,
          "type": "Neutral",
          "value": {
            "id": 27,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 6,
            },
          },
        },
        "lvl": 0,
        "right": {
          "id": 36,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 8,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 16,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 18,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 3,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "id": 26,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 5,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
      "7": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 7,
        },
      },
      "8": {
        "ann": {
          "id": 35,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 7,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 8,
        },
      },
    },
    "term": {
      "alternatives": [
        {
          "binders": [
            [
              "a",
              {
                "id": 28,
                "type": "Neutral",
                "value": {
                  "id": 27,
                  "type": "Var",
                  "variable": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 6,
                  },
                },
              },
            ],
          ],
          "pattern": {
            "row": {
              "label": "x",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Binder",
                "value": "a",
              },
            },
            "type": "Struct",
          },
          "term": {
            "id": 818,
            "type": "Var",
            "variable": {
              "index": 0,
              "type": "Bound",
            },
          },
        },
      ],
      "id": 819,
      "scrutinee": {
        "arg": {
          "id": 815,
          "row": {
            "label": "x",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "id": 813,
              "type": "Lit",
              "value": {
                "type": "Num",
                "value": 1,
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "id": 814,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Struct",
          },
        },
        "icit": "Explicit",
        "id": 816,
        "type": "App",
      },
      "type": "Match",
    },
    "type": {
      "id": 36,
      "type": "Var",
      "variable": {
        "lvl": 0,
        "type": "Meta",
        "val": 8,
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: match > match 1 | 1 -> 2 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?2",
    ],
    "term": "match 1
| 1 -> 2",
    "type": "?2",
  },
}
`;

exports[`inference: match > match 1 | 1 -> 2 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 17,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 16,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 18,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 18,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 18,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 20,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 19,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
    },
    "term": {
      "alternatives": [
        {
          "binders": [],
          "pattern": {
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 1,
            },
          },
          "term": {
            "id": 814,
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 2,
            },
          },
        },
      ],
      "id": 815,
      "scrutinee": {
        "id": 813,
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "type": "Match",
    },
    "type": {
      "id": 20,
      "type": "Var",
      "variable": {
        "lvl": 0,
        "type": "Meta",
        "val": 2,
      },
    },
    "typedTerms": {},
  },
}
`;
